--- a/view.ui
+++ b/view.ui
@@ -89,6 +89,20 @@
           <string>Box2D debug view</string>
          </property>
         </widget>
+        <widget class="QLabel" name="cameraControlLabel">
+         <property name="geometry">
+          <rect>
+           <x>170</x>
+           <y>0</y>
+           <width>161</width>
+           <height>51</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Click and drag to pan camera
+Scroll to zoom camera</string>
+         </property>
+        </widget>
        </widget>
       </item>
      </layout>
