--- a/view.ui
+++ b/view.ui
@@ -108,7 +108,74 @@ Scroll to zoom camera</string>
      </layout>
     </item>
     <item>
-     <layout class="QVBoxLayout" name="renderLayout"/>
+     <layout class="QVBoxLayout" name="renderLayout">
+      <item>
+       <widget class="QStackedWidget" name="stackedWidget">
+        <widget class="QWidget" name="MainMenu">
+         <widget class="QLabel" name="label">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>240</y>
+            <width>281</width>
+            <height>51</height>
+           </rect>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>42</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>WildLife Quiz</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="beastiaryButton">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>430</y>
+            <width>261</width>
+            <height>61</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Beastiary</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="startGameButton">
+          <property name="geometry">
+           <rect>
+            <x>600</x>
+            <y>340</y>
+            <width>261</width>
+            <height>61</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Start Game</string>
+          </property>
+         </widget>
+        </widget>
+        <widget class="QWidget" name="GameView">
+         <widget class="QWidget" name="verticalLayoutWidget">
+          <property name="geometry">
+           <rect>
+            <x>-1</x>
+            <y>-1</y>
+            <width>1441</width>
+            <height>811</height>
+           </rect>
+          </property>
+          <layout class="QVBoxLayout" name="renderGameLayout"/>
+         </widget>
+        </widget>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
