--- a/view.ui
+++ b/view.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>View</string>
+   <string>Wildlife Education App</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
