--- a/view.ui
+++ b/view.ui
@@ -191,6 +191,19 @@
 Scroll to zoom camera</string>
              </property>
             </widget>
+            <widget class="QLabel" name="quizLabel">
+             <property name="geometry">
+              <rect>
+               <x>370</x>
+               <y>0</y>
+               <width>611</width>
+               <height>51</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
            </widget>
           </item>
          </layout>
