--- a/res.qrc
+++ b/res.qrc
@@ -6,9 +6,9 @@
         <file alias="turtle">res/turtle.png</file>
         <file alias="cloud1">res/cloud1.png</file>
         <file alias="cloud2">res/cloud2.png</file>
-        <file>res/deersilhouette.png</file>
-        <file>res/rabbitsilhouette.png</file>
-        <file>res/squirrelsilhouette.png</file>
-        <file>res/turtlesilhouette.png</file>
+        <file alias="deersilhouette">res/deersilhouette.png</file>
+        <file alias="rabbitsilhouette">res/rabbitsilhouette.png</file>
+        <file alias="squirrelsilhouette">res/squirrelsilhouette.png</file>
+        <file alias="turtlesilhouette">res/turtlesilhouette.png</file>
     </qresource>
 </RCC>
