--- a/view.ui
+++ b/view.ui
@@ -45,7 +45,7 @@
     <item>
      <widget class="QStackedWidget" name="applicationStack">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="mainMenu">
        <layout class="QVBoxLayout" name="mainMenuLayout">
@@ -142,7 +142,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="res.qrc">:/res/deersilhouette.png</pixmap>
+         <pixmap resource="res.qrc">:/deersilhouette</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -270,7 +270,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="res.qrc">:/res/squirrelsilhouette.png</pixmap>
+         <pixmap resource="res.qrc">:/squirrelsilhouette</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -295,7 +295,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="res.qrc">:/res/rabbitsilhouette.png</pixmap>
+         <pixmap resource="res.qrc">:/rabbitsilhouette</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -394,7 +394,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="res.qrc">:/res/turtlesilhouette.png</pixmap>
+         <pixmap resource="res.qrc">:/turtlesilhouette</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
