--- a/res.qrc
+++ b/res.qrc
@@ -10,5 +10,7 @@
         <file alias="rabbitsilhouette">res/rabbitsilhouette.png</file>
         <file alias="squirrelsilhouette">res/squirrelsilhouette.png</file>
         <file alias="turtlesilhouette">res/turtlesilhouette.png</file>
+        <file alias="tree">res/tree.png</file>
+        <file alias="bush">res/bush.png</file>
     </qresource>
 </RCC>
