basic help box added

--- a/view.ui
+++ b/view.ui
@@ -585,6 +585,13 @@ Scroll to zoom camera</string>
               </widget>
              </item>
              <item>
+              <widget class="QPushButton" name="helpButton">
+               <property name="text">
+                <string>Help</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <widget class="QPushButton" name="gameBackButton">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
